--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 ---
-import astroLogo from '../assets/astro.svg';
+import astroLogo from '../assets/stressfulDev-logo.png';
 import background from '../assets/background.svg';
 ---
 
@@ -8,7 +8,7 @@ import background from '../assets/background.svg';
 	<main>
 		<section id="hero">
 			<a href="https://astro.build"
-				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
+				><img src={astroLogo.src} height="48" alt="Astro Homepage" /></a
 			>
 			<h1>
 				To get started, open the <code><pre>src/pages</pre></code> directory in your project.
